# flashback

./: .clang-format  .clangd  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE.md  README.md  docker-compose.yaml
.githooks/: pre-commit  pre-merge-commit  pre-push
.github/workflows/: develop.yml  ios.yml  release.yml
app/: CMakeLists.txt  Dockerfile  keystore_base64.txt  keystore_password.txt
app/src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json
app/src-tauri/apple/: ExportOptions.plist  project.yml
app/src-tauri/assets/: Flashback.desktop
app/src-tauri/icons/: .gitignore  icon.icns
app/src-tauri/msix/: AppxManifest.xml
cli/: CMakeLists.txt  Dockerfile  README.md
cli/include/flashback/: basic_config_manager.hpp  cli.hpp  client.hpp  config_manager.hpp  event_handler.hpp  options.hpp  page.hpp  reset_password_page.hpp  roadmap_page.hpp  server.hpp  signin_page.hpp  signup_page.hpp  welcome.hpp  welcome_page.hpp  window_manager.hpp
cli/proto/: server.proto
cli/src/: cli.cpp  client.cpp  config_manager.cpp  event_handler.cpp  main.cpp  options.cpp  page.cpp  reset_password_page.cpp  roadmap_page.cpp  screen.cpp  server.cpp  signin_page.cpp  signup_page.cpp  welcome.cpp  welcome_page.cpp  window_manager.cpp
client/: CMakeLists.txt
client/include/flashback/: basic_client.hpp  basic_config_manager.hpp  client.hpp  config_manager.hpp
client/src/: client.cpp  config_manager.cpp
client/test/mocks/: mock_client.cpp  mock_config_manager.cpp
cmake/: test_utils.cmake
common/: CMakeLists.txt  package.json  webpack.config.js
common/include/flashback/: exception.hpp
common/proto/: requests.proto  server.proto  types.proto
common/test/units/: test_common.cpp
daemon/: CMakeLists.txt
daemon/include/flashback/: server.hpp
daemon/res/: flashbackd.service
daemon/src/: main.cpp  server.cpp
daemon/test/mocks/flashback/: mock_server.hpp
daemon/test/units/: test_server.cpp
database/: CMakeLists.txt  create-test-database.sh  flashback.sql  perform-backup.sh  restore-database.sh  schema.sql  sync-test-database.sh
database/include/flashback/: basic_database.hpp  connection_pool.hpp  database.hpp  exceptions.hpp  types.hpp
database/src/: connection_pool.cpp  database.cpp
database/test/: database.cpp
database/test/mocks/flashback/: mock_database.hpp
database/test/units/: test_database.cpp
docs/: CNAME  design_overview.hpp  diagram.uml  index.hpp  index.html  initialization-sequence.uml  resource-sequence.uml  roadmap-sequence.uml
flashback/: CMakeLists.txt
flashback/include/flashback/: cli.hpp  page.hpp  roadmap_page.hpp
flashback/src/: options.cpp  signin_page.cpp  signup_page.cpp  welcome_page.cpp
flashback/test/units/: test_options.cpp
flashbackd/: CMakeLists.txt
flashbackd/include/flashback/: server.hpp
flashbackd/res/: flashbackd.service
flashbackd/src/: main.cpp  server.cpp
flashbackd/test/units/: test_server.cpp
gui/: CMakeLists.txt
gui/android/: AndroidManifest.xml
gui/android/res/drawable/: splashscreen.xml  splashscreen_land.xml  splashscreen_port.xml
gui/ios/Assets.xcassets/AppIcon.appiconset/: Contents.json
gui/src/: main.cpp
gui/ui/: Main.qml  Scene.qml  flashback.qrc
gui/ui/res/: generate-icns.sh
helpers/: add-resources-to-subjects  api.conf  complete-resource-information  envoy.yaml  export-resources  flashback.sh  httpd.conf  local.conf  setup.sh  start-service.sh  www.conf
helpers/resolve-lost-cards/: CMakeLists.txt  Card.hpp  main.cpp
server/: CMakeLists.txt  README.md
server/include/flashback/: database.hpp  server.hpp
server/res/: flashbackd.service
server/src/: database.cpp  main.cpp  server.cpp
server/test/: database.cpp
server/test/units/: test_server.cpp
shell/include/flashback/: exceptions.hpp  options.hpp  reset_password_page.hpp  signin_page.hpp
shell/src/: main.cpp  reset_password_page.cpp
web/: CMakeLists.txt  account.html  backup.html  bundle.js  card.html  delete-account.html  home.html  index.html  main.html  package-lock.json  privacy-policy.html  resource.html  roadmap.html  section-cards.html  signup.html  subject.html  topic-cards.html  webpack.config.js
web/css/: flashback-design.css  katex.css  prism.1.30.0.css  prism.css  styles.css
web/email/: deletion.html  verification.html
web/js/: account.js  auth.js  card.js  client.js  d3.js  delete-account.js  extended-languages.js  home.js  index.js  katex.js  marked.js  nav.js  prism.js  resource.js  roadmap.js  section-cards.js  signin.js  signup.js  subject.js  topic-cards.js  ui.js  vega-embed.js  vega-lite.js  vega.js
